--- a/wbl-frontend/package.json
+++ b/wbl-frontend/package.json
@@ -10,9 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tauri-apps/api": "^2.5.0",
     "@tauri-apps/cli": "^2.5.0",
+    "@tauri-apps/plugin-store": "^2.2.0",
+    "axios": "^1.9.0",
+    "dotenv": "^16.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.56.2",
     "react-router-dom": "^7.5.3"
   },
   "devDependencies": {
